# -*- coding: utf-8 -*-

2009-04-07  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Implement #initialize_copy.
	* lib/rubygems/commands/contents_command.rb:  Add --no-prefix and
	  --all.

2009-04-06  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/defaults.rb:  Don't allow gem to overwrite ruby on
	  install.  Fixes bug #24958 by Michael Soulier.
	* doc/release_notes/rel_1_3_2.rdoc:  Preliminary 1.3.2 release notes.
	* Rakefile:  Trim off some stale code, switch to Manifest.txt, one
	  step closer to Hoe!

2009-04-06  Daniel Berger  <djberg96@gmail.com>

	* test/test_gem_ext_configure_builder.rb: Better handling for MS
	  Windows.
	* test/gemutilities.rb: Added the make_command and vc_windows? helper
	  methods.

2009-04-03  Eric Hodel  <drbrain@segment7.net>

	* lib/: RDoc improvements.

2009-04-02  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/setup_command.rb:  Fix --destdir.  Patch
	  #24970 by Richard Brown.

2009-04-02  Phil Hagelberg <technomancy@gmail.com>

	* lib/rubygems/version.rb: Documentation of prerelease
	versions. See http://technomancy.us/123 for details.

2009-03-31  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/spec_fetcher.rb:  If the cached specs file won't load,
	  refetch.  Bug #24961 by Dylan Stamat.
	* lib/rubygems/defaults.rb:  Add a sanity check to
	  Gem.default_exec_format.  Workaround for bug #24958 by Michael
	  Soulier.
	* lib/rubygems/commands/setup_command.rb:  Fix confusion with option
	  names.  Patch #24971 by Richard Brown.
	* lib/rubygems/specification.rb:  Make #validate complain about
	  not-files.
	* lib/gauntlet_rubygems.rb:  For verification of the validator.

2009-03-27  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  RubyGems now loads plugins from rubygems_plugin.rb
	  in installed gems.  This can be used to add commands (See
	  Gem::CommandManager) or add install/uninstall hooks (See
	  Gem::Installer and Gem::Uninstaller).